--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -1,6 +1,6 @@
 - name: Dennis Morello
   bio: |
-    I am a Facebook Ads Expert working remotely. I have been analysing Facebook API for marketing spend of politcal spends. Here is my attempt to make sense from those numbers.
+    I am a Facebook Ads Expert working remotely. I have been analysing Facebook API for marketing spend of politcal actors. Here is my attempt to make sense from those numbers.
   avatar: ./avatars/dennis-morello.png
   featured: true
   slug: me
