--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -1,4 +1,4 @@
-- name: Dennis Morello
+- name: vavesparashar
   bio: |
     I am a Facebook Ads Expert working remotely. I have been analysing Facebook API for marketing spend of politcal actors. Here is my attempt to make sense from those numbers.
   avatar: ./avatars/dennis-morello.png
